<resources>
    <string name="app_name">My Application</string>
    <string name="sin">sin</string>
    <string name="cos">cos</string>
    <string name="tan">tan</string>
    <string name="deg">Deg</string>
    <string name="mr">MR</string>
    <string name="m">M-</string>
    <string name="m_plus">M+</string>
    <string name="multiply">*</string>
    <string name="equals">=</string>
    <string name="ac">AC</string>
    <string name="rnd">RND</string>
    <string name="plus_minus">±</string>
    <string name="divide">/</string>
    <string name="exp">EXP</string>
    <string name="_0">0</string>
    <string name="inv_sin">sin⁻¹</string>
    <string name="inv_cos">cos⁻¹</string>
    <string name="inv_tan">tan⁻¹</string>
    <string name="e">e</string>
    <string name="_0123456789">0123456789</string>
    <string name="decimal">.</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="ans">Ans</string>
    <string name="minus">-</string>
    <string name="_6">6</string>
    <string name="_5">5</string>
    <string name="_4">4</string>
    <string name="plus">+</string>
    <string name="_9">9</string>
    <string name="_7">7</string>
    <string name="n">n!</string>
    <string name="_8">8</string>
    <string name="percent">%</string>
    <string name="_1_x">1/x</string>
    <string name="close_parenthesis">)</string>
    <string name="open_parenthesis">(</string>
    <string name="back">BACK</string>
    <string name="u03c0">π</string>
    <string name="x">xʸ</string>
    <string name="x3">x³</string>
    <string name="x2">x²</string>
    <string name="ex">eˣ</string>
    <string name="_10x">10ˣ</string>
    <string name="yrootx">ʸ√x</string>
    <string name="threerootx">³√x</string>
    <string name="rootx">√x</string>
    <string name="ln">ln</string>
    <string name="log">log</string>
    <string name="rad">Rad</string>
</resources>